[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scenes/Stickman.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/AngryAnimal.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Wolf/wolf.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Wolf/down_walk/0.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Wolf/down_walk/1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Wolf/down_walk/2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Wolf/down_walk/3.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Wolf/down_walk/4.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Wolf/up_walk/0.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Wolf/up_walk/1.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Wolf/up_walk/2.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Wolf/up_walk/3.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Wolf/up_walk/4.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Wolf/right_walk/0.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Wolf/right_walk/1.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Wolf/right_walk/2.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Wolf/right_walk/3.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Wolf/right_walk/4.png" type="Texture" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "Down",
"speed": 12.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "Up",
"speed": 12.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "Walk",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.0426, 15.2284 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 22.7299, 24.5015 )

[sub_resource type="CircleShape2D" id=4]
radius = 41.9246

[node name="AngryAnimal" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Anim" type="AnimatedSprite" parent="." index="0"]
frames = SubResource( 1 )
animation = "Idle"
centered = false

[node name="Shape" parent="." index="1"]
position = Vector2( 32, 32 )
shape = SubResource( 2 )

[node name="StandingTimer" type="Timer" parent="." index="2"]
one_shot = true

[node name="BiteCooldown" type="Timer" parent="." index="3"]

[node name="HP_bar" parent="." index="4"]
margin_top = -7.0
margin_right = 64.0
margin_bottom = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 32.1958, 30.908 )
shape = SubResource( 3 )

[node name="BiteArea" type="Area2D" parent="." index="6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BiteArea" index="0"]
position = Vector2( 32.4105, 31.7665 )
shape = SubResource( 4 )

[connection signal="timeout" from="StandingTimer" to="." method="_on_StandingTimer_timeout"]
[connection signal="timeout" from="BiteCooldown" to="." method="_on_BiteCooldown_timeout"]
[connection signal="area_entered" from="BiteArea" to="." method="_on_BiteArea_area_entered"]
[connection signal="area_exited" from="BiteArea" to="." method="_on_BiteArea_area_exited"]
